# HistText

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCUSSION.md  Dockerfile  LICENSE.md  README.md  ROADMAP.md  docker-compose.yml  entrypoint.sh
app/: .gitignore  Cargo.toml  build.rs  diesel.toml  package-lock.json  package.json
app/.sqlx/: query-1e093b71c89925ec42631528239015977963904bb41f0d4b0598b8f0fb6cc7d7.json  query-956a5f6b293631f710ac66e18f25433a70cf0216e1a206badfa9ee43a2c3d6e4.json  query-fcf928cbbf2b4709a3625c6bb7d35623bc5a5f0bb71a3003fcc88554215539dd.json
app/backend/: README.md  app_data.rs  config.rs  main.rs  openapi.rs  schema.rs
app/backend/auth/: mod.rs  routes.rs  schema.rs
app/backend/auth/controllers/: auth.rs  mod.rs  permission_management.rs
app/backend/auth/mail/: auth_activated.rs  auth_password_changed.rs  auth_password_reset.rs  auth_recover_existent_account.rs  auth_recover_nonexistent_account.rs  auth_register.rs  mod.rs
app/backend/auth/middleware/: auth.rs
app/backend/auth/models/: mod.rs  permission.rs  role.rs  role_permission.rs  user.rs  user_permission.rs  user_role.rs  user_session.rs
app/backend/dev/: mod.rs
app/backend/graphql/: mod.rs  query.rs
app/backend/histtext/: documents.rs  embeddings.rs  metadata.rs  mod.rs  ner.rs  stats.rs  tokenizer.rs
app/backend/histtext/documents/: handlers.rs  mod.rs  processing.rs  search.rs  types.rs  utils.rs
app/backend/histtext/embeddings/: cache.rs  formats.rs  handlers.rs  mod.rs  similarity.rs  stats.rs  types.rs
app/backend/histtext/metadata/: cache.rs  database.rs  handlers.rs  mod.rs  types.rs
app/backend/histtext/ner/: cache.rs  handlers.rs  mod.rs  processing.rs  types.rs
app/backend/histtext/stats/: accumulator.rs  handlers.rs  mod.rs  processing.rs  types.rs  utils.rs
app/backend/histtext/tokenizer/: engines.rs  handlers.rs  mod.rs  types.rs  utils.rs
app/backend/mail/: auth_activated.rs  auth_password_changed.rs  auth_password_reset.rs  auth_recover_existent_account.rs  auth_recover_nonexistent_account.rs  auth_register.rs
app/backend/models/: common.rs  mod.rs
app/backend/models/app_configurations/: generated.rs  mod.rs
app/backend/models/security_events/: generated.rs
app/backend/models/solr_database_permissions/: generated.rs
app/backend/models/solr_databases/: generated.rs  mod.rs
app/backend/models/sqlx_migrations/: generated.rs
app/backend/server/: connection.rs  error.rs  guards.rs  mod.rs  routes.rs  security.rs  ssh.rs  startup.rs  state.rs  utils.rs
app/backend/services/: app_configurations.rs  auth.rs  auth_middleware.rs  cache_manager.rs  cache_monitor.rs  collection_intelligence.rs  crud.rs  database.rs  error.rs  mailer.rs  mod.rs  pagination.rs  password.rs  query_analytics.rs  query_cache.rs  query_optimizer.rs  request_analytics.rs  response_pool.rs  role_assignment.rs  role_management.rs  role_permissions.rs  security_events.rs  solr_database.rs  solr_database_info.rs  solr_database_permissions.rs  stats.rs  types.rs  user_behavior_analytics.rs  user_permissions.rs  user_roles.rs  users.rs
app/backend/template/: mod.rs  spa.rs  vite_bundle.rs
app/backend/views/: index.html
app/create-rust-app/create-rust-app/: Cargo.toml
app/diesel_logger-0.3.0/: .cargo_vcs_info.json  Cargo.toml
app/diesel_logger-0.3.0/src/: lib.rs
app/frontend/: README.md  config.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
app/frontend/bundles/: index.tsx
app/frontend/public/: index.html  robots.txt
app/frontend/public/docs/: READMES.md  README_NLP.md
app/frontend/src/: App.css  App.tsx  api.generated.ts  dev.tsx  setupDevelopment.tsx
app/frontend/src/components/: AlertBanner.tsx  LogoutButton.tsx  RouteGuards.tsx
app/frontend/src/containers/: AccountPage.tsx  ActivationPage.tsx  Files.tsx  GraphQLPage.tsx  HistText.tsx  Home.tsx  LoginPage.tsx  OauthLoginResultPage.tsx  RecoveryPage.tsx  RegistrationPage.tsx  ResetPage.tsx  Todo.tsx
app/frontend/src/contexts/: ConfigurationContext.tsx  NotificationContext.tsx  ThemeContext.tsx
app/frontend/src/hooks/: useAuth.tsx  useAuthenticatedApolloClient.ts  useErrorHandling.ts  useGlobalKeyboardNavigation.ts  useHistTextActions.ts  useHistTextData.ts  useQueryParam.ts  useSearchHistory.ts  useSmartValidation.ts  useStatisticsData.ts  useWordCloudProcessor.ts
app/frontend/tests/: authentication.spec.ts  example.spec.ts
app/migrations/00000000000001_utc/: down.sql  up.sql
app/migrations/00000000000002_plugin_auth/: up.sql
app/migrations/00000000000006_add_solr_databases/: down.sql  up.sql
app/migrations/2025-05-26-180544_create_security_events/: down.sql  up.sql
app/migrations/2025-05-27-120210_create_default_freeuser_role/: down.sql  up.sql
app/migrations/2025-05-27-133331_add_cascade_deletes_to_user_references/: down.sql  up.sql
app/migrations/2025-06-13-064404_create_app_configurations/: down.sql  up.sql
app/migrations/2025-06-13-083503_add_auth_performance_configs/: down.sql  up.sql
docs/: API_REFERENCE.md  (+6 more)
toolkit/: README.md  __init__.py  config.yaml  pyproject.toml  setup.py
toolkit/docs/source/: conf.py
toolkit/histtext_fastapi/app/: deps.py  main.py
toolkit/histtext_toolkit/: cli.py  main.py
toolkit/histtext_toolkit/cache/: manager.py
toolkit/histtext_toolkit/core/: config.py  errors.py  logging.py
toolkit/histtext_toolkit/models/: allennlp_ner.py  base.py  chinese_ner.py  chinese_segmenter.py  domain_utils.py  enhanced_registry.py  fasthan_ner.py  fastnlp_ner.py  fasttext_model.py  flair_ner.py  gliner_model.py  gliner_ner.py  llm_ner.py  modern_ner.py  ner_base.py  ner_labels.py  ner_registry.py  registry.py  spacy_model.py  spacy_ner.py  stanza_ner.py  transformers_model.py  transformers_ner.py  unified_ner.py  universal_transformers.py  word_embeddings_model.py
toolkit/histtext_toolkit/operations/: embeddings.py  enhanced_ner.py  ner.py  tokenize.py  upload.py
toolkit/histtext_toolkit/solr/: client.py  schema.py
toolkit/histtext_toolkit/utils/: clear_gpu_memory.py
(+885 files in other folders)
