[package]
name = "HistTextWeb"
version = "1.0.0"
edition = "2021"
publish = false
default-run = "HistTextWeb"

# Add features section to fix the warnings
[features]
default = []
database_sqlite = []
utoipa = [] 

[[bin]]
name = "fullstack"
path = ".cargo/bin/fullstack.rs"

[[bin]]
name = "tsync"
path = ".cargo/bin/tsync.rs"

[[bin]]
name = "dsync"
path = ".cargo/bin/dsync.rs"

[[bin]]
name = "backend"
path = ".cargo/bin/backend.rs"

[[bin]]
name = "frontend"
path = ".cargo/bin/frontend.rs"

[[bin]]
name = "HistTextWeb"
path = "backend/main.rs"

[[bin]]
name = "script"
path = "backend/bin/admin_once.rs"

[dependencies]
actix-files = "0.6.0"
actix-http = "3.0.0"
actix-multipart = "0.4.0"
actix-web = "4.0.1"
async-graphql = "3.0.38"
async-graphql-actix-web = "3.0.38"
dsync = "0.0.16"
fang = "0.10.4"
futures-util = "0.3.21"
jsonwebtoken = "8.1.0"
utoipa-swagger-ui = { version="4",  features = ["actix-web", "debug-embed"] }
serde_json = "1.0.79"
simple_logger = "4.3.3"
tsync = "1"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1.3"
rayon = "1.10.0"
use = "0.0.1-pre.0"
futures = "0.3.30"
arc = "0.0.1"
whatlang = "0.16.4"
stopwords = "0.1.1"
once_cell = "1.19.0"
lazy_static = "1.5.0"
flate2 = "1.0.33"
simd-json = "0.13.10"
memmap2 = "0.9.4"
dashmap = "6.0.1"
cursor = "2.3.0"
finalfusion = "0.18.0"
ndarray = "0.16.1"
itertools = "0.13.0"
simsimd = "5.0.1"
log = "0.4.22"
uuid = "1.10.0"
memchr = "2.7.4"
rustc-hash = "2.0.0"
async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
tokio-stream = "0.1.16"
anyhow = "1.0.88"
qsync = "1.0.1"
bcrypt = "0.15.1"
rand = "0.8.5"
rust-argon2 = "2.1.0"
diesel_logger = "0.3.0"
csv = "1.3.1"
regex = "1.11.1"
percent-encoding = "2.3.1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15.7"
jieba-rs = "0.7.2"
stop-words = "0.8.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validator = "0.20.0"
validator_derive = "0.20.0"
actix-web-httpauth = "0.8.2"
derive_more = "2.0.1"
lettre = "0.11.16"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.create-rust-app]
default-features = false
features = ["plugin_auth", "plugin_auth-oidc", "plugin_container", "plugin_storage", "plugin_tasks", "plugin_graphql", "plugin_utoipa", "plugin_dev", "database_postgres", "backend_actix-web"]
version = "11.0.0"

[dependencies.diesel]
default-features = false
features = ["postgres", "r2d2", "chrono"]
version = "2.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.133"

[dependencies.tokio]
features = ["full", "io-util", "fs"]
version = "1"

[dependencies.utoipa]
features = ["actix_extras", "chrono", "openapi_extensions"]
version = "4"

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dependencies.openssl-sys]
version = "0.9.103"
features = ["vendored"]

[dev-dependencies]
criterion = "0.5.0"
proptest = "1.2.0"
mockall = "0.11.3"

[patch.crates-io]
create-rust-app = { path = "create-rust-app/create-rust-app" }
diesel_logger = { path = "diesel_logger-0.3.0" }

[profile.dev]
debug-assertions = true
