[package]
name = "HistTextWeb"
version = "1.0.0"
edition = "2021"
publish = false
default-run = "HistTextWeb"

# Add features section to fix the warnings
[features]
default = []
database_sqlite = []
utoipa = [] 

[[bin]]
name = "fullstack"
path = ".cargo/bin/fullstack.rs"

[[bin]]
name = "tsync"
path = ".cargo/bin/tsync.rs"

[[bin]]
name = "dsync"
path = ".cargo/bin/dsync.rs"

[[bin]]
name = "backend"
path = ".cargo/bin/backend.rs"

[[bin]]
name = "frontend"
path = ".cargo/bin/frontend.rs"

[[bin]]
name = "HistTextWeb"
path = "backend/main.rs"

[[bin]]
name = "script"
path = "backend/bin/admin_once.rs"

[dependencies]
actix-files = "0.6.0"
actix-http = "3.0.0"
actix-web = "4.0.1"
async-graphql = "7.0.16"
dsync = "0.1.0"
futures-util = "0.3.21"
jsonwebtoken = "9.3.1"
utoipa-swagger-ui = { version="8.0.0",  features = ["actix-web", "debug-embed"] }
serde_json = "1.0.79"
simple_logger = "5.0.0"
tsync = "2.2.1"
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["json"] }
rayon = "1.10.0"
futures = "0.3.30"
whatlang = "0.16.4"
once_cell = "1.19.0"
lazy_static = "1.5.0"
flate2 = "1.0.33"
dashmap = "6.0.1"
log = "0.4.22"
uuid = { version = "1.10.0", features = ["v4"] }
memchr = "2.7.4"
rustc-hash = "2.0.0"
anyhow = "1.0.88"
rand = "0.9.1"
rust-argon2 = "2.1.0"
diesel_logger = "0.4.0"
csv = "1.3.1"
regex = "1.11.1"
percent-encoding = "2.3.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15.7"
jieba-rs = "0.7.2"
stop-words = "0.8.1"
tracing = "0.1.41"
actix-web-httpauth = "0.8.2"
derive_more = "2.0.1"
lettre = "0.11.16"
tera = "1.20.0"
ctrlc = "3.4.7"
actix-rt = "2.10.0"
memmap2 = "0.9.5"
num_cpus = "1.16.0"
tempfile = "3.20.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.diesel]
default-features = false
features = ["postgres", "r2d2", "chrono"]
version = "2.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.133"

[dependencies.tokio]
features = ["full", "io-util", "fs"]
version = "1"

[dependencies.utoipa]
features = ["actix_extras", "chrono", "openapi_extensions"]
version = "5.3.1"

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dependencies.openssl-sys]
version = "0.9.103"
features = ["vendored"]

[profile.dev]
debug-assertions = true
